# aoc

./: .gitignore  aoc.cabal  flake.nix
app/: Day1.hs  Day1ButWords.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs  day4.py
src/: Main.hs
src/2023/: D1.hs  D2.hs
src/2024/: D11.hs  D1ButWords.hs  D5.hs
