cabal-version:      3.4
name:               aoc
version:            0.1.0.0
author:             janw4ld
build-type:         Simple

common everything
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:
        -- -Weverything
        -- -Werror=missing-methods
        -- -Wno-missing-exported-signatures
        -- -Wno-missing-import-lists
        -- -Wno-missed-specialisations
        -- -Wno-all-missed-specialisations
        -- -Wno-unsafe
        -- -Wno-safe
        -- -Wno-missing-local-signatures
        -- -Wno-missing-safe-haskell-mode
        -- -Wno-missing-export-lists
        -- -Wno-implicit-prelude
        -- -Wno-monomorphism-restriction
    default-extensions:
        DerivingStrategies
        OverloadedStrings
        LambdaCase
        NoStarIsType
        RecordWildCards
        ViewPatterns
    build-depends:
        base ^>=4.20.0.0,

executable now
    import: everything
    main-is:          Main.hs
executable day1
    import: everything
    main-is:          Day1.hs
executable day2
    import: everything
    main-is:          Day2.hs
executable day3
    import: everything
    main-is:          Day3.hs
