cabal-version:      3.4
name:               aoc
version:            0.1.0.0
author:             janw4ld
build-type:         Simple

common everything
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -- -prof
        -- -fprof-auto
        -- -Weverything
        -- -Werror=missing-methods
        -- -Wno-missing-exported-signatures
        -- -Wno-missing-import-lists
        -- -Wno-missed-specialisations
        -- -Wno-all-missed-specialisations
        -- -Wno-unsafe
        -- -Wno-safe
        -- -Wno-missing-local-signatures
        -- -Wno-missing-safe-haskell-mode
        -- -Wno-missing-export-lists
        -- -Wno-implicit-prelude
        -- -Wno-monomorphism-restriction
        -- -Wno-missing-role-annotations
    default-extensions:
        LambdaCase
        OverloadedStrings
        RecordWildCards
        NoStarIsType
        DerivingStrategies
        FlexibleInstances
        RoleAnnotations
    build-depends:
        base >=4.19.0.0,
        containers

executable now
    import: everything
    main-is: Main.hs
executable day1
    import: everything
    main-is: Day1.hs
executable day2
    import: everything
    main-is: Day2.hs
executable day3
    import: everything
    main-is: Day3.hs
executable day4
    import: everything
    main-is: Day4.hs
executable day5
    import: everything
    main-is: Day5.hs
-- no day6 :(
executable day7
    import: everything
    main-is: Day7.hs
executable day8
    import: everything
    main-is: Day8.hs
executable day9
    import: everything
    main-is: Day9.hs
