cabal-version:      3.4
name:               aoc
version:            0.1.0.0
author:             janw4ld
build-type:         Simple

common everything
    default-language: GHC2021
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -- -prof
        -- -fprof-auto
        -- -with-rtsopts=-p
        -- -Weverything
        -- -Werror=missing-methods
        -- -Wno-missing-exported-signatures
        -- -Wno-missing-import-lists
        -- -Wno-missed-specialisations
        -- -Wno-all-missed-specialisations
        -- -Wno-unsafe
        -- -Wno-safe
        -- -Wno-missing-local-signatures
        -- -Wno-missing-safe-haskell-mode
        -- -Wno-missing-export-lists
        -- -Wno-implicit-prelude
        -- -Wno-monomorphism-restriction
        -- -Wno-missing-role-annotations
    default-extensions:
        LambdaCase
        OverloadedStrings
        RecordWildCards
        NoStarIsType
        DerivingStrategies
        FlexibleInstances
        RoleAnnotations
    build-depends:
        base >=4.19.0.0,
        containers

common 2024
    hs-source-dirs: src/2024

executable now
    import: everything
    hs-source-dirs: src
    main-is: Now.hs

executable 24d1
    import: everything
    import: 2024
    main-is: D1.hs
executable 24d2
    import: everything
    import: 2024
    main-is: D2.hs
executable 24d3
    import: everything
    import: 2024
    main-is: D3.hs
executable 24d4
    import: everything
    import: 2024
    main-is: D4.hs
executable 24d5
    import: everything
    import: 2024
    main-is: D5.hs
-- no 24d6 :(
executable 24d7
    import: everything
    import: 2024
    main-is: D7.hs
executable 24d8
    import: everything
    import: 2024
    main-is: D8.hs
executable 24d9
    import: everything
    import: 2024
    main-is: D9.hs
